--- a/docs/de-de/modules/maerkte/partials/catalogue-creation.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-creation.adoc
@@ -5,17 +5,12 @@ Katalog erstellen:
 . Klicke auf *Katalog erstellen* (icon:add[set=material]).
 . Gib einen Namen für den Katalog ein.
 . Wähle in der Dropdown-Liste *Export-Typ* die Option *{catalogue-template-name}*. +
-ifdef::catalogue-plugin[]
-*_Hinweis:_* Der Export-Typ *{catalogue-template-name}* ist nur wählbar, wenn das Plugin {plugin} installiert ist.
-endif::[]
-ifdef::general-catalogue-info[]
-*_Hinweis:_* Die Export-Typen bestimmter Marktplätze sind erst wählbar, wenn du das Plugin des Marktplatzes installiert und bereitgestellt hast.
-endif::[]
+ifdef::limango[*_Wichtig:_* Wähle das Format *limango new*, nicht das alte Format *limango*.]
+ifdef::catalogue-plugin[*_Hinweis:_* Der Export-Typ *{catalogue-template-name}* ist nur wählbar, wenn das Plugin *{plugin}* installiert ist.]
+ifdef::general-catalogue-info[*_Hinweis:_* Die Export-Typen bestimmter Marktplätze sind erst wählbar, wenn du das Plugin des Marktplatzes installiert und bereitgestellt hast.]
 ifdef::format-item-new[. Wähle in der Dropdown-Liste *Format-Typ* die Option *Artikel (neu)*.]
 ifndef::format-item-new[. Wähle in der Dropdown-Liste *Format-Typ* die Option *Artikel*.]
-ifdef::one-per-category[]
-. Wähle in der Dropdown-Liste *Format* die Kategorie des Marktplatzes, für die du den Katalog erstellen möchtest.
-endif::[]
+ifdef::one-per-category[. Wähle in der Dropdown-Liste *Format* die Kategorie des Marktplatzes, für die du den Katalog erstellen möchtest.]
 ifdef::etsy[]
 . Wähle in der Dropdown-Liste *Format* die Option *Etsy*. +
 *_Tipp:_* Für diesen Marktplatz kannst du nur einen Katalog erstellen. Deshalb ist als Format nur der Name des Marktplatzes wählbar.
