--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -732,7 +732,6 @@ Nachdem du Datenfelder für den Export gewählt hast, kannst du den Katalogexpor
 Vorschau im Katalog erstellen::
 +
 --
-//tag::catalogue-preview[]
 [.instruction]
 Vorschau im Katalog erstellen:
 
@@ -743,8 +742,7 @@ Vorschau im Katalog erstellen:
 → Im Fenster *Vorschau* wird eine Vorschau der ersten 5 Datenzeilen des Exports angezeigt.
 . Prüfe die Daten. Wurden die Daten so exportiert, wie du es erwartest?
 . *_Optional_*: Klicke auf *Daten herunterladen* (icon:file_download[set=material]). +
-→ Du kannst eine Datei mit den ersten 5 Produkten auf deinem Rechner speichern.
-//end::catalogue-preview[]
+→ Du kannst eine Datei mit den ersten 5 Datensätzen auf deinem Rechner speichern.
 --
  
 Vorschau in Katalogübersicht erstellen::
@@ -764,7 +762,7 @@ Vorschau in Katalogübersicht erstellen:
 → Im Fenster *Vorschau* wird eine Vorschau der ersten 5 Datenzeilen des Exports angezeigt.
 . Prüfe die Daten. Wurden die Daten so exportiert, wie du es erwartest?
 . *_Optional_*: Klicke auf *Daten herunterladen* (icon:file_download[set=material]). +
-→ Du kannst eine Datei mit den ersten 5 Produkten auf deinem Rechner speichern.
+→ Du kannst eine Datei mit den ersten 5 Datensätzen auf deinem Rechner speichern.
 
 --
 ====
