--- a/docs/de-de/modules/artikel/pages/markierungen.adoc
+++ b/docs/de-de/modules/artikel/pages/markierungen.adoc
@@ -5,7 +5,7 @@
 :author: team-item
 
 ////
-zuletzt bearbeitet 03.06.2022
+zuletzt bearbeitet 01.07.2022
 ////
 
 Willst du den Überblick über deine Produkte im Backend behalten?
@@ -150,16 +150,16 @@ Personen mit xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#10[Backen
 [#100]
 == Markierungen
 
-Die Idee ist ganz einfach.
-Weise jedem deiner Artikel eine oder zwei Markierungen zu.
-Diese Markierungen wirst du sehen, wenn du deine Artikel im Backend betrachtest.
-Solche visuellen Unterstützungen helfen dir, die richtigen Artikel auf den ersten Blick zu finden.
-Du kannst auch xref:artikel:suche.adoc#100[gezielt nach Artikeln im Backend suchen], die eine bestimmte Markierung oder Kombination von Markierungen haben.
+Mit plentymarkets kannst du jedem deiner Artikel eine oder zwei Markierungen zuweisen.
+Die Markierungen helfen dir, den Überblick über deine Artikel im Backend zu behalten.
+Du kannst sogar gezielt nach Artikeln im Backend suchen, die eine bestimmte Markierung oder Kombination von Markierungen haben.
 
-Wirf zunächst einen Blick auf die verschiedenen Markierungen, die in plentymarkets enthalten sind.
-Die Markierungen sind standardmäßig nach der ID benannt.
-Du kannst sie aber xref:artikel:markierungen.adoc#200[bei Bedarf umbenennen].
-Sobald du mit den Namen zufrieden bist, kannst du die xref:artikel:markierungen.adoc#300[Markierungen mit Artikeln verknüpfen].
+[discrete]
+==== Ablauf
+
+* Wirf einen Blick auf die Markierungen, die in plentymarkets enthalten sind, und benenne sie bei Bedarf um.
+* Versehe deine Artikel mit den Markierungen.
+* Suche nach Artikeln im Backend anhand ihrer Markierungen.
 
 [#200]
 === Markierungen umbenennen
@@ -179,10 +179,9 @@ Markierung umbenennen:
 [#300]
 === Artikel mit Markierungen versehen
 
-Sobald du mit den Namen zufrieden bist, kannst du die Markierungen mit Artikeln verknüpfen.
-Diese Markierungen wirst du sehen, wenn du deine Artikel im Backend betrachtest.
-Solche visuellen Unterstützungen helfen dir, die richtigen Artikel auf den ersten Blick zu finden.
-Du kannst auch xref:artikel:suche.adoc#100[gezielt nach Artikeln im Backend suchen], die eine bestimmte Markierung oder Kombination von Markierungen haben.
+Deine Artikel können mit maximal zwei Markierungen verknüpft werden.
+Markierungen werden auf Artikel-Ebene verknüpft.
+Das heißt, wenn du ein T-Shirt in den Farben Rot, Blau und Grün verkaufst, dann gilt die Markierung für alle drei Farbvarianten gleichermaßen.
 
 [.instruction]
 Artikel mit bis zu zwei Markierungen versehen:
@@ -192,3 +191,55 @@ Artikel mit bis zu zwei Markierungen versehen:
 → Ganz weit rechts in der Symbolleiste sind zwei Schaltflächen für Markierungen.
 . Klicke auf eine oder beide der Schaltflächen und wähle eine Markierung aus der Dropdown-Liste.
 . *Speichere* (icon:save[set=plenty, role="green"]) die Einstellungen.
+
+//nachdem die neue UI als default gesetzt wurde, diesen Satz stattdessen einfügen und auch die auskommentierte Text in die Artikelsuche-Seite live schalten
+
+//. Öffne das Menü *Artikel » Artikel-UI*.
+//. xref:artikel:artikelsuche.adoc#100[Suche] und öffne den Artikel. +
+//→ Oben in der Symbolleiste sind zwei Schaltflächen für Markierungen.
+//. Klicke auf eine oder beide der Schaltflächen und wähle eine Markierung aus der Dropdown-Liste.
+//. *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
+
+[#350]
+=== Artikel mit einer bestimmten Markierung suchen
+
+Du kannst gezielt nach Artikeln im Backend suchen, die eine bestimmte Markierung oder Kombination von Markierungen haben.
+
+[.instruction]
+Artikel mit einer bestimmten Markierung suchen:
+
+. Öffne das Menü *Artikel » Artikel bearbeiten*.
+. Stelle die Filter links wie folgt ein:
+.. Setze links den Filter xref:artikel:suche.adoc#intable-tabellentyp[Tabellentyp] auf *Artikel*.
+.. Setze links den Filter xref:artikel:suche.adoc#intable-aktiv[Aktiv] auf *ALLE*.
+.. Wähle in den Filtern xref:artikel:suche.adoc#100[Markierung 1 und 2] die passende Kombination von Markierungen.
+. Klicke auf *Suchen* (icon:search[role="blue"]). +
+→ Alle Artikel mit dieser Kombination von Markierungen werden angezeigt.
+
+//nachdem die neue UI als default gesetzt wurde, diesen Satz stattdessen einfügen und auch die auskommentierte Text in die Artikelsuche-Seite live schalten
+
+//. Öffne das Menü *Artikel » Artikel-UI*.
+//. Klicke auf *Filter* (icon:tune[set=material, role="darkGrey"]) und wähle aus den Dropdown-Listen xref:artikel:artikelsuche.adoc#100[Markierung 1 und 2] die passende Kombination von Markierungen.
+//. Klicke auf icon:search[role="blue"] *Suchen*. +
+//→ Alle Artikel mit dieser Kombination von Markierungen werden angezeigt.
+
+[discrete]
+==== Ich sehe die Markierung nicht in der Übersicht
+
+Du siehst die Markierungen, wenn du deine Artikel im Backend betrachtest.
+Solche visuellen Unterstützungen helfen dir, die richtigen Artikel auf den ersten Blick zu finden.
+Was aber tun, wenn die Symbole fehlen?
+Gehe wie folgt vor, falls du die Markierungen nicht in der Übersicht siehst.
+
+. Bewege deinen Mauszeiger über die Spaltenüberschriften und klicke auf *Ansicht einrichten* (icon:gear[role="darkGrey"]).
+. Wähle die Spalten *Markierung 1* und *Markierung 2* (icon:check-square[role="blue"]).
+. *Speichere* (icon:save[set=plenty, role="green"]) die Einstellungen.
+
+//nachdem die neue UI als default gesetzt wurde, diesen Satz stattdessen einfügen und auch die auskommentierte Text in die Artikelsuche-Seite live schalten
+
+//. Klicke auf *Spalten konfigurieren* (icon:gear[role="darkGrey"]).
+//. Wähle die Spalten *Markierung 1* und *Markierung 2* (icon:check-square[role="blue"]).
+//. Bewege deinen Mauszeiger über das Symbol icon:drag_indicator[set=material, role="darkGrey"]. +
+//→ Dein Mauszeiger ändert seine Form (icon:arrows[role="darkGrey"]).
+//. Ziehe den Eintrag an die gewünschte Stelle.
+//. Klicke auf *BESTÄTIGEN*.
