--- a/docs/en-gb/modules/payment/pages/currencies.adoc
+++ b/docs/en-gb/modules/payment/pages/currencies.adoc
@@ -1,17 +1,73 @@
 = Managing currencies
-:description: Payment in plentymarkets: Organize and manage currencies in your plentymarkets system and change the display options of currencies in the online shop.
+:description: Payment in plentymarkets: Set up currencies in your plentymarkets system and decide how the currency is displayed in your online shop.
 :id: SLNMMPS
-:keywords: currency, standard currency, live conversion, conversion, converting, convert, system currency, conversion factor, currency settings
+:keywords: currency, standard currency, default currency, live conversion, currency settings, convert currency, currency conversion, system currency, exchange rate, currency symbol, conversion factor
 :author: team-fulfillment-payment
 
 If you want to offer your items for sale in different countries, working with various currencies is essential. This page describes the necessary settings you have to carry out in your plentymarkets system for this purpose.
 
+[#30]
+== Defining the system currency
+
+If you are working with several currencies, you have to select one of those currencies as the standard currency of your plentymarkets system. The standard currency is automatically selected as the default currency whenever no other currency is selected. By default, the standard currency in your system is *EUR* (Euro). +
+In plentymarkets, orders are always created in the standard currency. In addition, the currency selected by your customers during the order process is always saved with every single incoming order. If an order was placed in a currency different from the standard currency, the current exchange rate is also saved with the order. Thus, these values are permanently available and can be used to analyse order data or to e.g. send automatic notifications.
+
+[.instruction]
+Defining the system currency:
+
+. Go to *Setup » Orders » Payment » Currencies*.
+. Select a currency for the option *Standard currency*.
+. *Save* (icon:save[role="green"]) the settings.
+
+[IMPORTANT]
+.System currency vs. online shop currency
+====
+This setting is not necessarily identical to the currency displayed in your online shop. You can define a different standard currency for each online shop and each language. Further information on these settings are provided on the manual page xref:online-store:setting-up-ceres.adoc#[Setting up plentyShop LTS] in the xref:online-store:setting-up-ceres.adoc#201[Carrying out currency settings] chapter. This page deals directly with setting up your plentyShop.
+====
+
+[#20]
+== Converting currencies
+
+Go to *Setup » Item » Sales prices* and activate the option *Currency: Live conversion* to determine if the xref:item:prices.adoc#[currency conversion in the online shop is carried out automatically]. +
+In addition, carry out general currency settings for all incoming orders in the menu *Setup » Orders » Payment » Currencies*. To do so, proceed as described below.
+
+[.instruction]
+Converting currencies:
+
+. Go to *Setup » Orders » Payment » Currencies*.
+. Carry out the settings according to <<#table-settings-currency>>.
+. *Save* (icon:save[role="green"]) the settings.
+
+[[table-settings-currency]]
+.Currency settings
+[cols="1,3"]
+|====
+|Setting |Explanation
+
+| *Standard currency*
+|Select the xref:payment:currencies.adoc#30[system currency] from the drop-down list.
+
+| *Automatically update conversion factors daily*
+|This option specifies whether or not the conversion factors are automatically updated on a daily basis. +
+*Yes* = The conversion factors will be updated automatically over night. The option *Last automatic update* is shown below the option for automatic updates of conversion factors (see next option). +
+*No* = A *reload icon* is displayed for each currency. Use this icon to manually update the current conversion rates any time.
+
+| *Last automatic update*
+|Displays the time of the last automatic update of the conversion factors. +
+This field is only visible if the option *Automatically update conversion factors daily* is set to *Yes*.
+
+| *Conversion factor for standard currency into AED, ARS, AUD, …​*
+|The exchange rates are already displayed when opening the menu *Setup » Orders » Payment » Currencies*. +
+If you set the option *Automatically update conversion factors daily* to *No*, you have to update the exchange rates. A* reload icon* is displayed for each currency. Use this icon to manually update the current conversion rates any time. Alternatively, set the option *Automatically update conversion factors daily* to *Yes* to ensure that the conversion factors are automatically updated on a daily basis. +
+*_Note:_* plentymarkets obtains the exchange rates from link:https://x-rates.com/[x-rates-com^].
+|====
+
 [#10]
 == Supported currencies
 
-Your plentymarkets system currently supports the currencies listed in <<table-supported-currencies>>.
+Your plentymarkets system currently supports the currencies listed in <<#table-available-currencies>>.
 
-[[table-supported-currencies]]
+[[table-available-currencies]]
 .Currencies in plentymarkets
 [cols="1,3"]
 |====
@@ -45,7 +101,7 @@ Your plentymarkets system currently supports the currencies listed in <<table-su
 |Switzerland, Swiss franc
 
 | *CNY*
-|People's Republic of China, Renminbi
+|People’s Republic of China, Renminbi
 
 | *CZK*
 |Czech Republic, Czech koruna
@@ -137,58 +193,3 @@ Your plentymarkets system currently supports the currencies listed in <<table-su
 | *ZAR*
 |South African rand
 |====
-
-[#20]
-== Converting currencies
-
-Go to xref:item:prices.adoc#[Setup » Item » Sales prices] and activate the option *Currency: Live conversion* to determine if the currency conversion in the online shop is carried out automatically. +
-In addition, carry out general currency settings for all incoming orders in the menu *Setup » Orders » Payment » Currencies*. To do so, proceed as described below.
-
-[.instruction]
-Converting currencies:
-
-. Go to *Setup » Orders » Payment » Currencies*.
-. Carry out the settings according to <<table-settings-currencies>>.
-. *Save* the settings.
-
-[[table-settings-currencies]]
-.Currency settings
-[cols="1,3"]
-|====
-|Setting |Explanation
-
-| *Standard currency*
-|Select the <<#30, system currency>> from the drop-down list.
-
-| *Automatically update conversion factors daily*
-|This option specifies whether or not the conversion factors are automatically updated on a daily basis. +
-*Yes* = The conversion factors will be updated automatically over night. The option *Last automatic update* appears below the option for automatic updates of conversion factors. +
-*No* = a *reload icon* is displayed for each currency. Use this icon to manually update the current conversion rates any time.
-
-| *Last automatic update*
-|Displays the time of the last automatic update of the conversion factors. This field is only visible if the option *Automatically update conversion factors daily* is set to *Yes*.
-
-| *Conversion factor for standard currency into AED, ARS, AUD, ...*
-|The exchange rates are already displayed when opening the menu *Setup » Orders » Payment » Currencies*, but might need to be updated. Click on *Reload* next to the respective currency to manually update the exchange rates. Alternatively, set the option *Automatically update conversion factors daily* to *Yes*. +
-*_Note:_* plentymarkets obtains the exchange rates from link:https://x-rates.com/[x-rates-com^].
-
-|====
-
-[#30]
-== Defining the system currency
-
-If you are working with several currencies, you have to select one of those currencies as the standard currency of your plentymarkets system. The standard currency is automatically selected as the default currency whenever no other currency is selected. By default, the standard currency in your system is *EUR* (Euro). +
-In plentymarkets, orders are always created in the standard currency. In addition, the currency selected by your customers during the order process is always with every single incoming order. If an order was placed in a currency different from the standard currency, the current exchange rate is also saved with the order. Thus, these values are permanently available and can be used to analyse order data or to e.g. send automatic notifications.
-
-[.instruction]
-Defining the system currency:
-
-. Go to *Setup » Orders » Payment » Currencies*.
-. Select a currency for the option *Standard currency*.
-. *Save* the settings.
-
-[IMPORTANT]
-.System currency vs. Online shop currency
-====
-This setting is not necessarily identical to the currency displayed in your online shop. You can define a different standard currency for each online shop and each language. Further information on these settings are provided on the manual page xref:online-store:setting-up-ceres.adoc#201[Carrying out currency settings]. This page deals directly with setting up your plentyShop.
-====
