--- a/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
@@ -66,14 +66,14 @@ a| The processing time in days.
 * Property of the type *Int* (whole number)
 
 3+a| Warehouse +
-*_Note:_* In the Kaufland catalogues, the mappings for *warehouses* are shown for every Kaufland account. Make sure that you map the data fields for the correct Kaufland account, i.e. the Kaufland catalogue for which you want to use this catalogue. +
+*_Note:_* In the Kaufland catalogues, the mappings for *warehouses* are shown for every Kaufland account. Make sure that you map the data fields for the correct Kaufland account, i.e. the Kaufland account for which you want to use this catalogue. +
 The name and the ID of the Kaufland account are displayed above the mappings: *Account name (ID: account ID)*.
 
 image::markets:kaufland-kontoname-lager.png[]
 
 | id_warehouse
 | yes
-| Here you map Kaufland warehouses. This data field contains a complex mapping. This means that you can select from different values of the marketplace data field. In this case, the values are your Kaufland warehouses.  The values are then assigned to a plentymarkets data field. In this case, you have to use a property. +
+| Here you map Kaufland warehouses. This data field contains a complex mapping. This means that you can select from different values of the marketplace data field. In this case, the values are your Kaufland warehouses. The values are then assigned to a plentymarkets data field. In this case, you have to use a property. +
 For *id_warehouse*, you first select the Kaufland warehouse and then assign a property. +
 *_Note:_* The ID of the Kaufland warehouse is shown here. +
 
@@ -83,7 +83,7 @@ recommended mapping:
 *_Tip:_* For example, you can use the names of your Kaufland warehouses as selection values for the property.
 
 3+a| Shipping profiles +
-*_Note:_* In the Kaufland catalogues, the mappings for *shipping profiles* are shown for every Kaufland account. Make sure that you map the data fields for the correct Kaufland account, i.e. the Kaufland catalogue for which you want to use this catalogue. +
+*_Note:_* In the Kaufland catalogues, the mappings for *shipping profiles* are shown for every Kaufland account. Make sure that you map the data fields for the correct Kaufland account, i.e. the Kaufland account for which you want to use this catalogue. +
 The name and the ID of the Kaufland account are displayed above the mappings: *Account name (ID: account ID)*.
 
 image::markets:kaufland-kontoname-versandprofil.png[]
