--- a/docs/de-de/modules/maerkte/pages/etsy.adoc
+++ b/docs/de-de/modules/maerkte/pages/etsy.adoc
@@ -138,7 +138,7 @@ Exportsprachen einstellen:
 
 :market: Etsy
 :referrer: Etsy
-:referrer-option: pass:quotes[Option *Etsy* mit der ID *15*]
+:referrer-option: pass:quotes[Option *Etsy*]
 
 include::partial$auftragsherkunft-aktivieren.adoc[]
 
@@ -416,7 +416,7 @@ include::_includes:partial$rights.adoc[]
 --
 Wenn ein Artikel personalisierbar ist, kann der Artikel zum Beispiel mit einer persönlichen Gravur oder einem Namen versehen werden. +
 Wenn du deinen Kund:innen die Möglichkeit geben willst, einen Artikel zu personalisieren, musst du bei Etsy die Option *Anfragen für Spezialanfertigungen* aktivieren. +
-Außerdem musst du in plentymarkets in deinem Katalog für Etsy das Marktplatz-Datenfeld *Personalisierbar (is_customizable)* mit einer Eigenschaft des Typs *Auswahl* verknüpfen. 
+Außerdem musst du in plentymarkets in deinem Katalog für Etsy das Marktplatz-Datenfeld *Personalisierbar (is_customizable)* mit einer Eigenschaft des Typs *Auswahl* verknüpfen.
 
 Mögliche Auswahlwerte für die Eigenschaft:
 
