--- a/docs/en-gb/modules/markets/pages/etsy.adoc
+++ b/docs/en-gb/modules/markets/pages/etsy.adoc
@@ -138,7 +138,7 @@ Setting up export languages:
 
 :market: Etsy
 :referrer: Etsy
-:referrer-option: pass:quotes[option *Etsy* with the ID *15*]
+:referrer-option: pass:quotes[option *Etsy*]
 
 include::partial$activate-referrer.adoc[]
 
@@ -422,7 +422,7 @@ include::_includes:partial$rights.adoc[]
 --
 If an item can be customised, then the item can, for example, be engraved or a name can be added.  +
 If you want to offer your customers the possibility to customise an item, then you have to activate the option *Accept custom orders* on Etsy. +
-Additionally, you have to link the data field *Customizable (is_customizable)* to a property of the type *Selection* in your Etsy catalogue.  
+Additionally, you have to link the data field *Customizable (is_customizable)* to a property of the type *Selection* in your Etsy catalogue.
 
 Possible selection values for the property:
 
