--- a/docs/en-gb/modules/markets/partials/mirakl-market-assistant.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-market-assistant.adoc
@@ -103,39 +103,72 @@ endif::voelkner[]
 
 2+^| Step *Offer properties mapping*
 
-| Offer properties mapping
-| From the drop-down list *Logistic class*, select the property *{market} Logistic class*. +
-The properties for *Leadtime to ship* and *Reverse charge* selected by default.
+| *Reverse charge*
+| The _reverse charge procedure_. The property is created and mapped automatically. Valid values are `true` or `false`.
 
-[cols="1a,3a"]
-!===
-! *Reverse charge*
-! The _reverse charge procedure_. Valid values are `true` or `false`.
+| *Leadtime to ship*
+| The _lead time to ship_. This is the time in days that a seller needs from accepting the order to registering the shipping. The property is created and mapped automatically. A whole number between 1 and 45 has to be transferred.
 
-! *Leadtime to ship*
-! The _lead time to ship_. This is the time in days that a seller needs from accepting the order to registering the shipping. A whole number between 1 and 45 has to be transferred.
+| *Logistics class*
+| From the drop-down list *Logistic class*, select the property *{market} Logistic class*.
 
-! *Logistics class*
-! This is the connection of a variation with a certain market shipping profile. The shipping profiles of the market are listed in the back end in the *{mirakl-menu-shipping}* menu. The value in brackets is the value that has to be exported.
+This is the connection of a variation with a certain market shipping profile. The shipping profiles of the market are listed in the back end in the *{mirakl-menu-shipping}* menu. The value in brackets is the value that has to be exported.
 
-! *update-delete*
-! The option to delete an offer. If the field is not filled, *update* will be used automatically.
+| *update-delete*
+| The option to delete an offer. If the field is not filled, *update* will be used automatically.
 
 ifdef::conrad,voelkner[]
-! *product-id-type*
-! This field does not have to be defined. *SHOP_SKU* is transferred by default.
+| *product-id-type*
+| This field does not have to be defined. *SHOP_SKU* is transferred by default.
 endif::conrad,voelkner[]
 
 ifdef::voelkner[]
-! *Base price gross content quantity:*
-! Define the gross content quantity for the base price at the variation.
+| *Base price gross content quantity:*
+| Define the gross content quantity for the base price at the variation.
 endif::voelkner[]
 
 ifdef::voelkner[]
-! *Product base price unit of measurement*
-! Define the unit of measurement of the base price unit at the variation. Valid values are `KG`, `L`, `M`, `M2` or `M3`.
+| *Product base price unit of measurement*
+| Define the unit of measurement of the base price unit at the variation. Valid values are `KG`, `L`, `M`, `M2` or `M3`.
 endif::voelkner[]
-!===
+
+ifdef::voelkner[]
+| Data fields for discount prices: +
+*Discount start time* +
+*Discount end time*
+| You can export promotion prices that are valid for a specific period. Graduated prices can also be discounted. To set up the discount, create special prices with the same values for the setting *Minimum quantity* as for the graduated prices for {market}.
+
+*_Preparations:_*
+
+* Create a property of the type *Date* for the start date. For example, name this property `Voelkner discount start time`.
+* Create a property of the type *Date* for the end date. For example, name this property `Voelkner discount end time`.
+* In this step of the assistant, map the following data fields:
+  ** Marketplace data field *Discount start time* = plentymarkets property *Voelkner discount start time* of the type *Date*
+  ** Marketplace data field *Discount end time* = plentymarkets property *Voelkner discount end time* of the type *Date*
+
+*_Create a special price for a sales price:_*
+
+* Create a sales price of the type *Special offer*. +
+  *_Tip:_* Remember to activate the referrers *Mirakl* and *Voelkner* for this special offer price.
+
+*_Create special price for graduated prices:_*
+
+* Create the same number of sales prices of the type *Special price* as you created sales prices for graduated prices for {market}.
+  *_Tip:_* Remember to activate the referrers *Mirakl* and *Voelkner* for these special offer prices.
+* For the special prices, enter the same values for the setting *Minimum quantity* as for the sales prices used for the graduation.
+
+[.instruction]
+Defining discount prices for a variation:
+
+. Link the sales price of the type *Special offer* to the variation.
+. Enter a price for the special sales price.
+. *_Optional:_* To reduce graduated prices, also link the other *special prices* for graduated prices with the variation and enter a price.
+. Link the variation with the property *Voelkner discount start date*.
+. Select a date for the property. The discount price is started on this date.
+. Link the variation with the property *Voelkner discount end date*.
+. Select a date for the property. The discount price is ended on this date.
+
+endif::voelkner[]
 
 2+^| Step *Offer export settings*
 
