--- a/docs/de-de/modules/crm/pages/ticketsystem-nutzen.adoc
+++ b/docs/de-de/modules/crm/pages/ticketsystem-nutzen.adoc
@@ -102,7 +102,8 @@ Nachdem du alle Tests durchgeführt hast, musst du den Testmodus im Menü *Einri
 | *E-Mail*
 |Gib die E-Mail-Adresse ein, die für das Ticketsystem verwendet werden soll. Das ist ein Pflichtfeld.
 
-2+^| *Abruf* (icon:exclamation-triangle[role="red"] *_Hinweis:_* Alle Einstellungen in diesem Bereich sind Pflichteinstellungen.)
+2+^| *Abruf* (icon:exclamation-triangle[role="red"] *_Hinweis:_* Alle Einstellungen in diesem Bereich sind Pflichteinstellungen.) +
+*_Hinweis:_* Wenn du Office 365 Exchange nutzt, beachte den <<#hinweis-office-365-exchange, Hinweis>> unterhalb dieser Tabelle.
 
 | *Aktiv*
 |Aktiviere die Option, wenn das Konto und damit der Abruf aktiv sein soll. +
@@ -166,6 +167,15 @@ Wähle *Löschen*, wenn die E-Mails _nicht_ gespeichert werden sollen. Die E-Mai
 |Diese Option ist nur sichtbar, wenn die Aktion *Verschieben* gewählt wurde. Wähle den Ordner, in den die E-Mails verschoben werden sollen. +
 *_Wichtig:_* Die Wahl eines Ordners ist zwingend. Wenn du keinen Ordner wählst, werden die E-Mails _nicht_ verschoben.
 |====
+
+[#hinweis-office-365-exchange]
+[.collapseBox]
+.Office 365 Exchange mit Basic Auth
+--
+Wenn du Office 365 Exchange in Verbindung mit Basic Auth nutzt, ist es nicht mehr möglich, den E-Mail-Abruf bzw. den E-Mail-Import zu starten. Die Standardauthentifizierung (Basic Auth) wurde von Exchange Online für link:https://docs.microsoft.com/de-de/lifecycle/announcements/exchange-online-basic-auth-deprecated[veraltet^] erklärt. +
+Der E-Mail-Versand ist hiervon _nicht_ betroffen.
+Als Workaround kannst du ein neues Postfach bei einem anderen Anbieter einrichten und E-Mails dorthin weiterleiten.
+--
 
 [#650]
 === Rechte für Backend-Benutzer:innen für Rollen, Status und Typen vergeben
