--- a/docs/de-de/modules/business-entscheidungen/pages/durchschnittlicher-bestellwert.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/durchschnittlicher-bestellwert.adoc
@@ -194,7 +194,7 @@ include::partial$subscription-item-start-date.adoc[]
 :kennzahl: Der durchschnittliche Bestellwert
 :das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem der Warenausgang für die Aufträge gebucht wurde, einbezogen.
 
-include::partial$warenausgangsdatum.adoc[]
+include::partial$warenausgangsdatum-dimension.adoc[]
 
 === Zahlungsart, Erstellungsdatum
 
