--- a/docs/en-gb/modules/business-decisions/pages/return-rate.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/return-rate.adoc
@@ -212,7 +212,7 @@ include::partial$subscription-item-start-date.adoc[]
 :key-figure: The return rate
 :this-means: This means that the date on which outgoing items were booked for the orders is considered in the calculation.
 
-include::partial$date-outgoing-items.adoc[]
+include::partial$date-outgoing-items-dimension.adoc[]
 
 === Payment method, creation date
 
