--- a/docs/en-gb/modules/business-decisions/pages/shipping-revenue.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/shipping-revenue.adoc
@@ -210,7 +210,7 @@ include::partial$subscription-item-start-date.adoc[]
 :key-figure: The shipping revenue
 :this-means: This means that the date on which outgoing items were booked for the orders is considered in the calculation.
 
-include::partial$date-outgoing-items.adoc[]
+include::partial$date-outgoing-items-dimension.adoc[]
 
 === Payment method, creation date
 
