--- a/docs/en-gb/modules/crm/pages/quick-search.adoc
+++ b/docs/en-gb/modules/crm/pages/quick-search.adoc
@@ -108,13 +108,57 @@ Select the setting *All except Germany* to only display contacts from all countr
 
 |====
 
+[#save-current-filter]
+=== Saving the current filters
+
+When you start a search, your selected filters are displayed up top as chips. You can save these filters to apply them again more quickly and easily in the future.
+
+[.instruction]
+Saving the current filters: 
+
+. Start a search.
+. Click on *Saved filters* (material:bookmarks[]).
+. Click on material:bookmark_border[] *Save current filter*.
+. Enter a name for the filter.
+. Decide whether
+** this filter should be <<#default-filter, set as default filter>> (icon:toggle-on[role="blue"])
+** this filter should be created for all users (icon:toggle-on[role="blue"]).
+. Click on *SAVE*. +
+→ The filter now appears under *Saved filters* (material:bookmarks[]).
+
 [TIP]
-When you open a data record in the *CRM » Quick search* menu, you can click on *Start* (material:play_circle[]) to start the timer. Click on *Pause* (material:pause_circle[]) to stop the timer. Click on *Reset* (terra:reset[]) to set the time to 0.
+Use drag-and-drop to arrange the filters in a specific order by clicking on *Move* (material:drag_indicator[]). Click on material:delete[] to delete a filter.
+
+[#apply-saved-filters]
+=== Applying saved filters
+
+Proceed as follows to apply an already saved filter for the search.
+
+[.instruction]
+Applying saved filters: 
+
+. Click on *Saved filters* (material:bookmarks[]).
+. Click on a filter that you have already created. +
+→ The search is started and the filter settings are displayed up top as so-called “chips”.
+
+[#default-filter]
+=== Setting a default filter
+
+To make sure that you don’t have to select a filter that you use quite often from the list of your <<#apply-saved-filters, saved filters>> every time when opening the *CRM » Quick search* menu, you can set a created filter as default filter. Every time when you open the quick search, this filter will be automatically applied.
+
+You can set the filter as default filter directly when creating it as described in <<#save-current-filter, Saving the current filter>> or you can set the filter as default in the overview afterwards.
+
+Click in the line of the saved filter on icon:star-o[] *Set as default*.
+
+If you want to set another filter as default filter, deactivate the currently selected default filter by clicking on icon:star[] *Do not use as default*.
 
 [#edit-data-record]
 == Editing a data record
 
 When you open a data record in the quick search, you see further possible settings in the first line of the data record. These settings are explained in <<#table-settings-quick-search>>.
+
+[TIP]
+When you open a data record in the *CRM » Quick search* menu, you can click on *Start* (material:play_circle[]) to start the timer. Click on *Pause* (material:pause_circle[]) to stop the timer. Click on *Reset* (terra:reset[]) to set the time to 0.
 
 [[table-settings-quick-search]]
 .Settings in the quick search
