--- a/docs/en-gb/modules/data/pages/export-marketplace-formats.adoc
+++ b/docs/en-gb/modules/data/pages/export-marketplace-formats.adoc
@@ -100,6 +100,7 @@ This information is structured like this:
 * <<#one-to-one-fallback, 1:1 mappings with fallback data fields>>
 * <<#one-to-n, 1:n mappings>>
 * <<#own-value, Own value mappings>>
+* <<#formula, Recalculating numerical values (Formula)>>
 
 [#mappings-what-is]
 === What does “mapping” mean?
